Updated role name in metadata

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: gitlab
   author: btomasini
   description: Gitlab in docker container behind ssl proxy
   company: Activated, Inc.
