--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,11 @@ gitlab_base_path: /var/lib/gitlab
 gitlab_data_path: "{{ gitlab_base_path }}/data"
 gitlab_logs_path: "{{ gitlab_base_path }}/logs"
 gitlab_config_path: "{{ gitlab_base_path }}/config"
-gitlab_external_url: http://localhost
+gitlab_external_url: https://localhost
 gitlab_docker_image: gitlab/gitlab-ce:11.2.0-ce.0
-gitlab_http_port: 8080
+gitlab_http_enabled: false 
+gitlab_http_host_port: 8080
+gitlab_https_enabled: true
+gitlab_https_host_port: 8443
+gitlab_ssl_cert_path: "{{ gitlab_config_path }}/ssl/certs/gitlab.crt"
+gitlab_ssl_key_path: "{{ gitlab_config_path }}/ssl/private/gitlab.key"
