--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,11 +27,24 @@
     dest: "{{ gitlab_config_path }}/gitlab.rb"
     mode: 0644
   notify: restart_gitlab_container
+- name: Empty list of port mappings
+  set_fact:
+    gitlab_ports: []
+- name: Append http port mapping
+  set_fact:
+    gitlab_ports: "{{ gitlab_ports }} + [ '{{ gitlab_http_host_port }}:80' ]"
+  when: gitlab_http_enabled
+- name: Append https port mapping
+  set_fact:
+    gitlab_ports: "{{ gitlab_ports }} + [ '{{ gitlab_https_host_port }}:443' ]"
+  when: gitlab_https_enabled
 - name: Run gitlab container
   docker_container:
     name: gitlab
     image: "{{ gitlab_docker_image }}"
     restart_policy: unless-stopped
+    # TODO - We should remove this and fix the actual ulimit issue
+    privileged: true
     sysctls:
       net.core.somaxconn: 1024
     ulimits:
@@ -39,8 +52,7 @@
       - nproc:131072
       - nofile:60000
       - core:0
-    published_ports:
-      - "{{ gitlab_http_port }}:80"
+    published_ports: "{{ gitlab_ports }}"
     volumes:
       - "{{ gitlab_config_path }}:/etc/gitlab"
       - "{{ gitlab_logs_path }}:/var/log/gitlab"
