--- a/molecule/ssl/playbook.yml
+++ b/molecule/ssl/playbook.yml
@@ -10,7 +10,7 @@
     cert_ca_key_src: ./certs/ca.key
     cert_ca_conf_src: ./certs/cert.conf
     cert_ca_cert_name: mycompany
-    cert_dest_directory: /var/lib/gitlab/config/ssl
+    cert_dest_directory: /etc/ssl
     cert_name: gitlab
     cert_owner: gitlab
     cert_group: gitlab
