--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,5 +11,7 @@ gitlab_http_enabled: false
 gitlab_http_host_port: 8080
 gitlab_https_enabled: true
 gitlab_https_host_port: 8443
+gitlab_ssh_enabled: false
+gitlab_ssh_host_port: 2222
 gitlab_ssl_cert_path: "/certs/gitlab.crt"
 gitlab_ssl_key_path: "/private/gitlab.key"
